--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Dinossaur Game</title>
 </head>
 <body>
-    
+    <div class="background">
+        <div class="dino">
+            
+        </div>
+    </div>    
+
     <script src="assets/js/main.js"></script>
 </body>
 </html>
