--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             background-color: #a3e2ff;
         }
         h1 {
-            margin-top: 50px;
             margin-bottom: 50px;
         }
         .myversion {
@@ -61,6 +60,8 @@
             Classic
         </button>
     </a>
+    </br>
+    <img src="assets/media/classic.gif" style="height: 170px; width: 450px; margin-bottom: 20px;">
     </br>
     <a href="">
         <button class="myversion">
