--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
+            font-family: Arial, sans-serif;
             text-align: center;
             background-color: #a3e2ff;
         }
         h1 {
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }
         .myversion {
             background-color: blue;
@@ -55,7 +56,7 @@
     <h1>
         Escolha qual versão do Jogo do Dinossauro você quer jogar.
     </h1>
-    <a href="">
+    <a href="classic.html">
         <button class="classic">
             Classic
         </button>
