--- a/myversion.html
+++ b/myversion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style2.css">
     <title>Dinossaur Game</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
             
         </div>
     </div>    
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main2.js"></script>
 </body>
 </html>
