--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             margin-bottom: 30px;
         }
         .myversion {
+            margin-bottom: 30px;
             background-color: blue;
             width: 150px;
             border: 1px solid darkblue;
@@ -64,10 +65,12 @@
     </br>
     <img src="assets/media/classic.gif" style="height: 170px; width: 450px; margin-bottom: 20px;">
     </br>
-    <a href="">
+    <a href="myversion.html">
         <button class="myversion">
             My Version
         </button>
     </a>
+    </br>
+    <img src="assets/media/myversion.gif" style="height: 170px; width: 450px; margin-bottom: 20px;">
 </body>
 </html>
